--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ body .setting-button{
 .nav-section .logo-image{
     width: 15%;
 }
+
 .nav-section .nav-icon{
     width: 35%;
     justify-content: flex-end;
@@ -599,7 +600,7 @@ body .setting-button{
 .par-button{
     padding: 15px 40px;
     color: #F7FFFF;
-    background: linear-gradient(90deg, hwb(183 0% 0% / 0.8),hwb(277 0% 28% / 0.8));
+    background-image: linear-gradient(90deg, hwb(183 0% 0% / 0.8),hwb(277 0% 28% / 0.8));
     position: relative;
     z-index: 0;
     transition: all 0.3s ease;
@@ -846,9 +847,7 @@ body .setting-button{
     margin-right: 10px;
 }
 /*==========ICONS===========*/
-.icon-group h2{
-    
-}
+
 .icon-group .icon{
     width: 40px;
     height: 40px;
@@ -1375,8 +1374,7 @@ html,body{
     padding: 40px 15px;
 
 }
-.header-section{
-}
+
 /*=============GET_THEME-SECTION=============*/
 /*=============portfolio-SECTION=============*/
 
@@ -1533,8 +1531,7 @@ html,body{
 
 
 /*=============HEADER-SECTION=============*/
-.header-section{
-}
+
 .head-text{
     padding: 20px 10px;
 }
@@ -1554,9 +1551,7 @@ html,body{
     position: relative;
     bottom: -3px;
 }
-.about-image-left, .about-image-right{
-    
-}
+
 .about-image-center {
     top: -13px;
     z-index: 1;
@@ -1614,8 +1609,7 @@ html,body{
 .service-box-right ul li p{
     padding: 15px 0;
 }
-.service-box-center{
-}
+
 .service-box-center img{
     height: 400px;
     object-fit: contain;
@@ -1745,8 +1739,7 @@ html,body{
     top: -8px;
 }
 /*=============BETTER-SECTION=============*/
-.better-section{
-}
+
 .better-section .better-text{
     padding: 0;
     padding-top: 50px;
@@ -1883,9 +1876,9 @@ html,body{
 @media only screen and (max-width:360px){
 
 /*=============NAVIGATION-SECTION=============*/
-.nav-section .nav-icon{
-    width: 5%;
-}
+    .nav-section .nav-icon{
+        width: 5%;
+    }
 /*=============HEADER-SECTION=============*/
 /*=============GET_THEME-SECTION=============*/
 /*=============portfolio-SECTION=============*/
