--- a/css/style.css
+++ b/css/style.css
@@ -700,6 +700,9 @@ body .setting-button{
 .adobe{
     width: 75%;
     transition: width 0.3s ease;
+
+}
+.animate{
     animation: adobe-growth 3s ease 0.5s infinite;
 
 }
